# avioly-demo

AiAgent/core/: interfaces.py  types.py
AiAgent/domain/: agent.py  excel_tools.py  pdf_tools.py  retrieval.py
AiAgent/infra/config/: file_store.py
AiAgent/infra/embeddings/: dense.py  tfidf.py
AiAgent/infra/llm/: gemini.py
AiAgent/infra/storage/: json_store.py  json_vector_store.py  sqlite_store.py
avioFly/Sources/AvioFly/DependencyInjection/: ConversationModuleDependencies.swift
avioFly/Sources/AvioFly/Domain/Models/: ConversationModels.swift
avioFly/Sources/AvioFly/Domain/Repositories/: ConversationRepositories.swift
avioFly/Sources/AvioFly/Infrastructure/Caching/: InMemoryConversationCache.swift
avioFly/Sources/AvioFly/Infrastructure/Repositories/: ConversationRemoteRepository.swift
avioFly/Sources/AvioFly/Infrastructure/Services/: ConversationRemoteService.swift  ConversationStreamingService.swift
avioFly/Sources/AvioFly/Presentation/ViewModels/: ConversationViewModel.swift
avioFly/Tests/AvioFlyTests/: ConversationViewModelTests.swift
avioFlyBackend/: README.md  pyproject.toml
avioFlyBackend/src/aviofly_backend/: app.py
avioFlyBackend/src/aviofly_backend/core/: errors.py  interfaces.py  models.py  settings.py
avioFlyBackend/src/aviofly_backend/domain/: cache.py  policy.py  retrieval.py  service.py  streaming.py  telemetry.py  usage.py
avioFlyBackend/src/aviofly_backend/infra/: llm.py  policy.py  rerank.py  storage.py  telemetry.py  usage.py  vector_store.py
avioFlyBackend/tests/: test_conversation_service.py
(+2 files in other folders)
